# quadratic-assignment-problem

./: .gitignore  CMakeLists.txt  README.md  qap.sln  qap.vcxproj  qap.vcxproj.filters
props/: Boost.props  CplexDebug64.props  CplexRelease64.props
src/: Data.cpp  Data.h  LocalSearch.cpp  LocalSearch.h  Main.cpp  MemeticAlgorithm.cpp  MemeticAlgorithm.h  Parameters.cpp  Parameters.h  QuadraticFormulation.cpp  QuadraticFormulation.h  Random.cpp  Random.h  Singleton.h  Solution.cpp  Solution.h  TwoOpt.cpp  TwoOpt.h
src/crossovers/: CycleCrossover.cpp  CycleCrossover.h
src/metaheuristics/: MemeticAlgorithm.cpp  MemeticAlgorithm.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
src/moves/: TwoOpt.cpp  TwoOpt.h
src/mutations/: TwoOptMutation.cpp  TwoOptMutation.h
src/neighborhoods/: Neighborhood.h  ThreeOpt.cpp  ThreeOpt.h  TwoOpt.cpp  TwoOpt.h
src/search/: GuidedLocalSearch.cpp  GuidedLocalSearch.h  LocalSearch.cpp  LocalSearch.h  VariableNeighborhoodDescent.cpp  VariableNeighborhoodDescent.h
